Bug#32301 - If a transaction is started though the storageHandler, like it is when start_consistent_snapshot() is called, then make sure connection->startTransaction is called so that a transaction object is created with a transactionID.

Do not allow a transaction's isolation level to change after it
has been instantiated.
Set the internal default isolation level to consistent read.